namespaces/live.cloud-platform.service.justice.gov.uk/justiceredact-prototype/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "justiceredact-prototype"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "Central Digital"
    cloud-platform.justice.gov.uk/slack-channel: "justice-redact"
    cloud-platform.justice.gov.uk/application: "Gov.UK Prototype Kit"
    cloud-platform.justice.gov.uk/owner: "Transformation Ambition - CDIO: platforms@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/justiceredact-prototype"
    cloud-platform.justice.gov.uk/team-name: "justice-redact"
    cloud-platform.justice.gov.uk/review-after: ""
